[package]
name = "aether"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
crc32fast = "1.4.2"
crossbeam-skiplist = "0.1.3"
fs2 = "0.4.3"
itertools = "0.13.0"
jammdb = "0.11.0"
memmap2 = "0.9.5"
parking_lot = "0.12.3"
prost = "0.13.2"
rand = "0.8.5"
scopeguard = "1.2.0"
thiserror = "1.0.63"
